--- a/index.html
+++ b/index.html
@@ -1,1 +1,71 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="Alvin Yuen" />
+  <meta name="description" content="Fullstack Software Engineer" />
+
+  <title>Alvin Yuen</title>
+
+  <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+  <link href="assets/css/animate.css" rel="stylesheet" type="text/css">
+  <link href="assets/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="assets/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />
+  <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+
+  <script src="assets/jquery/jquery-3.1.1.min.js"></script>
+  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/js/scripts.js"></script>
+
+</head>
+
+<body>
+
+  <div class="main-container">
+  <nav>
+    <div class="bar">
+      <ul id="menu">
+        <a href="#resume"><i class="fa-file-text-o fa"></i>Resume</a>
+        <a href="#projects" target="_blank"><i class="fa-laptop fa"></i>Projects</a>
+        <a href="#contact"><i class="fa-address-book-o fa"></i>Contact</a>
+      </ul>
+      <i id="burger" class="fa fa-bars"></i>
+    </div>
+  </nav>
+
+
+  <div class="name-container">
+    <div class="name-wrap">
+      <div class="name"> Alvin Yuen </div>
+      <div class="name-desc"> Fullstack Software Developer </div>
+    </div>
+  </div>
+
+  <div id="parallax-img">
+    <img src="assets/img/hk.jpg" />
+  </div>
+
+  <div id="projects" class="project-container">
+    <div class="project-wrap">
+      <div class="project-title">Projects</div>
+      <div class="notion-project">
+        <img alt="notion-thumbnail" />
+        <div>
+        A brainstorming & collaboration platform
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="contact" class="contact-container">
+      <div class="contact-wrap">
+        Contact
+      </div>
+  </div>
+
+  </div>
+</body>
+
+</html>
