--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <nav>
     <div class="bar">
       <ul id="menu">
-        <a href="#about"><i class="fa-file-text-o fa"></i>About</a>
+        <a href="#about"><i class=" fa-user fa"></i>About</a>
         <a href="#projects" target="_blank"><i class="fa-laptop fa"></i>Projects</a>
         <a href="#contact"><i class="fa-address-book-o fa"></i>Contact</a>
       </ul>
@@ -53,6 +53,7 @@
   <div id="about" class="about-container" >
     <div class="about-wrap" data-aos="fade-right" data-aos-duration="2200">
       <div class="about-title">About Me</div>
+      <span class="about-title-slider"></span>
 
 
       <div class="about-desc" >
@@ -73,9 +74,10 @@
   <div id="projects" class="project-container">
     <div class="project-wrap">
       <div class="project-title">Projects</div>
+      <span class="project-title-slider"></span>
 
 
-      <div class="project" data-aos="fade-right" data-aos-duration="2200" >
+      <div class="project" data-aos="fade-up" data-aos-duration="2200" >
         <img class="project-img" src="assets/img/notion-1.png" alt="notion-thumbnail" />
         <div class="projects-title">Notion</div>
         <div class="project-desc">
@@ -83,7 +85,7 @@
         </div>
         <a href="https://github.com/halleycarleton/Notion" class="project-link">GitHub</a>
       </div>
-      <div class="project" data-aos="fade-right" data-aos-duration="2200"   >
+      <div class="project" data-aos="fade-down" data-aos-duration="2200"   >
         <img class="project-img" src="assets/img/riotanalytics.png" alt="notion-thumbnail" />
         <div class="projects-title">Riot Analytics</div>
         <div class="project-desc">
@@ -98,6 +100,7 @@
   <div id="contact" class="contact-container">
       <div class="contact-wrap">
         <div class="contact-title"> Contact </div>
+        <span class="contact-title-slider"></span>
         <div class="contact-email-head">contact me @</div>
         <div class="contact-email">alvinyuen628@gmail.com</div>
 
