animation & add kickzero project

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <ul id="menu">
         <a href="#about"><i class=" fa-user fa"></i>About</a>
         <a href="#projects" target="_blank"><i class="fa-laptop fa"></i>Projects</a>
-        <a href="#contact"><i class="fa-address-book-o fa"></i>Contact</a>
+        <a href="#contact"><i class="fa-envelope-o fa"></i>Contact</a>
       </ul>
       <i id="burger" class="fa fa-bars"></i>
     </div>
@@ -40,7 +40,11 @@
 
   <div class="name-container">
     <div class="name-wrap">
-      <div class="name"> Alvin Yuen </div>
+      <div class="name">
+        <div class="first-name">Alvin</div>
+        <div>&nbsp;</div>
+        <div class="last-name">Yuen</div>
+      </div>
       <div class="name-desc"> Fullstack Web Developer </div>
     </div>
   </div>
@@ -86,12 +90,21 @@
         <a href="https://github.com/halleycarleton/Notion" class="project-link">GitHub</a>
       </div>
       <div class="project" data-aos="fade-down" data-aos-duration="2200"   >
-        <img class="project-img" src="assets/img/riotanalytics.png" alt="notion-thumbnail" />
+        <img class="project-img" src="assets/img/riotanalytics.png" alt="riotanalytics-thumbnail" />
         <div class="projects-title">Riot Analytics</div>
         <div class="project-desc">
         Competitive Gamer Analyzer
         </div>
         <div class="project-link">GitHub</div>
+      </div>
+
+      <div class="project" data-aos="fade-up" data-aos-duration="2200"   >
+        <img class="project-img" src="assets/img/kickzero.png" alt="kickzero-thumbnail" />
+        <div class="projects-title">Kick Zero</div>
+        <div class="project-desc">
+        Kick Hero Clone
+        </div>
+        <a href="https://github.com/alvinyuen/kickzero" class="project-link">GitHub</a>
       </div>
 
     </div>
