--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Fullstack Software Engineer" />
 
   <title>Alvin Yuen</title>
-
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link href="assets/css/style.css" rel="stylesheet" type="text/css">
   <link href="assets/css/animate.css" rel="stylesheet" type="text/css">
   <link href="assets/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
