--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 
       <div class="project" data-aos="fade-up" data-aos-duration="2200" >
         <img class="project-img" src="assets/img/notion-1.png" alt="notion-thumbnail" />
+         <img class="project-img" src="assets/img/notion-2.png" alt="notion-thumbnail" />
         <div class="projects-title">Notion</div>
         <div class="project-desc">
         A brainstorming & collaboration platform
@@ -91,11 +92,13 @@
       </div>
       <div class="project" data-aos="fade-down" data-aos-duration="2200"   >
         <img class="project-img" src="assets/img/riotanalytics.png" alt="riotanalytics-thumbnail" />
+        <img class="project-img" src="assets/img/riotanalytics-playerstats.png"
+        alt="riotanalytics-thumbnail-two" />
         <div class="projects-title">Riot Analytics</div>
         <div class="project-desc">
-        Competitive Gamer Analyzer
+        Competitive Gamer Analyzer on the popular game League of Legends
         </div>
-        <div class="project-link">GitHub</div>
+        <a href="https://github.com/alvinyuen/lolanalytics" class="project-link">GitHub</a>
       </div>
 
       <div class="project" data-aos="fade-up" data-aos-duration="2200"   >
@@ -105,6 +108,7 @@
         Kick Hero Clone
         </div>
         <a href="https://github.com/alvinyuen/kickzero" class="project-link">GitHub</a>
+        <div></div>
       </div>
 
     </div>
